# rtspShow

./: CMakeLists.txt  Readme.md  main.cpp
cmakes/: FindFFmpeg.cmake  FindOpenCV.cmake
